--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="second-sub">
                     <div class="second-left">
-                        <img src="images/" alt="">
+                        <img src="images/Research Insight.svg" alt="">
                         <h2>Research Insight Blogs</h2>
                         <p>Dive deep into future technology concepts with our research section.</p>
                     </div>
