--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <div class="second-right-bottom">
                             <div class="sec-sub-div">
                                 <h4>Frequency</h4>
-                                <p>Fresh content added daily to keep you uo to date.</p>
+                                <p>Fresh content added daily to keep you up to date.</p>
                             </div>
                             <div class="sec-sub-div">
                                 <h4>Authoritative</h4>
