--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="bottom-header">
                 <img src="images/Logo.svg" alt="">
                 <nav>
-                    <a href="" class="home">
+                    <a href="" class="main-nav">
                         <p>Home</p>
                     </a>
-                    <a href="">
+                    <a href="news.html">
                         <p>News</p>
                     </a>
                     <a href="">
