--- a/news.html
+++ b/news.html
@@ -251,13 +251,13 @@
             <div class="view-second">
                 <div class="view-sub-div">
                     <img src="images/Mars.svg" alt="">
-                    <h6>Mars EXploration: Unvieling Alien Lansscapes</h6>
+                    <h6>Mars Exploration: Unvieling Alien Lansscapes</h6>
                     <p>Embark on a journey through the Red Planet's breathtaking landscapes and uncover the mysteries of
                         Mar</p>
                 </div>
                 <div class="view-sub-div">
                     <img src="images/Blockchain.svg" alt="">
-                    <h6>Blockchain Explained: A Revoution in Finance</h6>
+                    <h6>Blockchain Explained: A Revolution in Finance</h6>
                     <p>Delve into the world of blockchain technology and its transformative impact on the financial
                         industry.</p>
                 </div>
