--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
                     <p>A knowledge Treasure Trove</p>
                     <h5>Explore FutureTech's In-Depth Blog Posts</h5>
                 </div>
-                <button>View All Blogs <img src="images/go-icon.svg" alt=""></button>
+                <a href="blog.html">
+                    <button>View All Blogs <img src="images/go-icon.svg" alt=""></button>
+                </a>
             </div>
             <div class="third-nav">
                 <p>All</p>
@@ -449,7 +451,9 @@
         </section>
         <footer>
             <div class="foot">
-                <h4>Home</h4>
+                <a href="index.html">
+                    <h4>Home</h4>
+                </a>
                 <p>Features</p>
                 <p>Blogs</p>
                 <p>Resouces <span>New</span></p>
@@ -458,7 +462,9 @@
                 <p>Newsletter</p>
             </div>
             <div class="foot">
-                <h4>News</h4>
+                <a href="news.html">
+                    <h4>News</h4>
+                </a>
                 <p>Trending Stories</p>
                 <p>Featured Videos</p>
                 <p>Technology</p>
@@ -467,7 +473,9 @@
                 <p>Environment</p>
             </div>
             <div class="foot">
-                <h4>Blogs</h4>
+                <a href="blog.html">
+                    <h4>Blogs</h4>
+                </a>
                 <p>Quantum Computing</p>
                 <p>AI Ethics</p>
                 <p>Space Exploration</p>
