--- a/news.html
+++ b/news.html
@@ -315,7 +315,9 @@
         </section>
         <footer>
             <div class="foot">
-                <h4>Home</h4>
+                <a href="index.html">
+                    <h4>Home</h4>
+                </a>
                 <p>Features</p>
                 <p>Blogs</p>
                 <p>Resouces <span>New</span></p>
@@ -324,7 +326,9 @@
                 <p>Newsletter</p>
             </div>
             <div class="foot">
-                <h4>News</h4>
+                <a href="news.html">
+                    <h4>News</h4>
+                </a>
                 <p>Trending Stories</p>
                 <p>Featured Videos</p>
                 <p>Technology</p>
@@ -333,7 +337,9 @@
                 <p>Environment</p>
             </div>
             <div class="foot">
-                <h4>Blogs</h4>
+                <a href="blog.html">
+                    <h4>Blogs</h4>
+                </a>
                 <p>Quantum Computing</p>
                 <p>AI Ethics</p>
                 <p>Space Exploration</p>
