--- a/news.html
+++ b/news.html
@@ -24,14 +24,14 @@
                     <a href="news.html" class="main-nav">
                         <p>News</p>
                     </a>
-                    <a href="">
+                    <a href="podcast.html">
                         <p>Podcasts</p>
                     </a>
-                    <a href="">
+                    <a href="resources.html">
                         <p>Resources</p>
                     </a>
                 </nav>
-                <a href="">
+                <a href="contact.html">
                     <button>Contact Us</button></a>
             </div>
         </header>
@@ -348,14 +348,18 @@
                 <p>Biohacking</p>
             </div>
             <div class="foot">
-                <h4>Podcasts</h4>
+                <a href="podcast.html">
+                    <h4>Podcasts</h4>
+                </a>
                 <p>AI Revolution</p>
                 <p>AI Revolution <span>New</span></p>
                 <p>TechTalk AI</p>
                 <p>AI Conversations</p>
             </div>
             <div class="foot">
-                <h4>Resources</h4>
+                <a href="resources.html">
+                    <h4>Resources</h4>
+                </a>
                 <div class="wrap">
                     <button>Whitepapers <img src="images/go-icon.svg" alt=""></button>
                     <button>Ebooks <img src="images/go-icon.svg" alt=""></button>
