--- a/blog.html
+++ b/blog.html
@@ -21,17 +21,17 @@
                     <a href="index.html">
                         <p>Home</p>
                     </a>
-                    <a href="news.html" class="">
+                    <a href="news.html">
                         <p>News</p>
                     </a>
-                    <a href="">
+                    <a href="podcast.html">
                         <p>Podcasts</p>
                     </a>
-                    <a href="">
+                    <a href="resources.html">
                         <p>Resources</p>
                     </a>
                 </nav>
-                <a href="">
+                <a href="contact.html">
                     <button>Contact Us</button></a>
             </div>
         </header>
@@ -265,14 +265,18 @@
                 <p>Biohacking</p>
             </div>
             <div class="foot">
-                <h4>Podcasts</h4>
+                <a href="podcast.html">
+                    <h4>Podcasts</h4>
+                </a>
                 <p>AI Revolution</p>
                 <p>AI Revolution <span>New</span></p>
                 <p>TechTalk AI</p>
                 <p>AI Conversations</p>
             </div>
             <div class="foot">
-                <h4>Resources</h4>
+                <a href="resources.html">
+                    <h4>Resources</h4>
+                </a>
                 <div class="wrap">
                     <button>Whitepapers <img src="images/go-icon.svg" alt=""></button>
                     <button>Ebooks <img src="images/go-icon.svg" alt=""></button>
