--- a/resources.html
+++ b/resources.html
@@ -35,6 +35,248 @@
                     <button>Contact Us</button></a>
             </div>
         </header>
+        <div class="headline">
+            <h1>Unlock a world of Knowledge</h1>
+            <div class="sub-headline">
+                <p>Dive deep into the AI universe with our collection of insightful podcasts. Explore the latest trends,
+                    breakthroughs, and discussions on artificial intelligence. Whether you're an enthusiast or a
+                    professional, our AI podcasts offer a gateway to knowledge and innovation.</p>
+            </div>
+        </div>
+        <div class="res-rate">
+            <div class="res-rate-sub">
+                <h2>300<span>+</span></h2>
+                <p>Resources available</p>
+            </div>
+            <div class="res-rate-sub">
+                <h2>12k<span>+</span></h2>
+                <p>Total Downloads</p>
+            </div>
+            <div class="res-rate-sub">
+                <h2>10k<span>+</span></h2>
+                <p>Active Users</p>
+            </div>
+            <div class="res-rate-sub">
+                <h2>100<span>+</span></h2>
+                <p>Countries Accesses Our Content</p>
+            </div>
+        </div>
+        <section class="fourth">
+            <div class="fourth-top">
+                <div class="fourth-top-left">
+                    <p>Dive into the Details</p>
+                    <h5>In-Depth Reports and Analysis</h5>
+                </div>
+                <div class="res-type">
+                    <p>Whitepapers</p>
+                    <p>Ebooks</p>
+                    <p>Reports</p>
+                </div>
+            </div>
+            <div class="fourth-bottom">
+                <div class="fourth-left">
+                    <img src="images/Quantom-icon.svg" alt="">
+                    <h2>Quantom Computing Whitepaper</h2>
+                    <p>Provides technical specifications and requirements for implementing quantum computing systems.
+                    </p>
+                </div>
+                <div class="fourth-right">
+                    <img src="images/Quantom-img.svg" alt="">
+                    <div class="res-sub1">
+                        <div class="res-sub-text">
+                            <h6>Quantom Computing Whitepaper</h6>
+                            <p>An in-depth whitepaper exploring the principles, applications, and potential impact
+                                of quantum computing.</p>
+                        </div>
+                        <button>Download PDF Now <img src="images/go-icon.svg" alt=""></button>
+                    </div>
+                    <div class="res-sub2">
+                        <div class="res-sub2-text">
+                            <p>Publication Date</p>
+                            <h3>July 2023</h3>
+                        </div>
+                        <div class="res-sub2-text">
+                            <p>Category</p>
+                            <h3>Quantom Computing</h3>
+                        </div>
+                        <div class="res-sub2-text">
+                            <p>Author</p>
+                            <h3>Dr. Quantum</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="fourth-bottom">
+                <div class="fourth-left">
+                    <img src="images/space-icon.svg" alt="">
+                    <h2>Space Exploration Whitepaper</h2>
+                    <p>Explores Mars colonization, asteroid resource potential, and space tourism.</p>
+                </div>
+                <div class="fourth-right">
+                    <img src="images/space-img.svg" alt="">
+                    <div class="res-sub1">
+                        <div class="res-sub-text">
+                            <h6>Space Exploration whitepapers</h6>
+                            <p>An in-depth whitepaper covering the latest advancements in space exploration, including
+                                Mars missions and asteroid mining.</p>
+                        </div>
+                        <button>Download PDF Now <img src="images/go-icon.svg" alt=""></button>
+                    </div>
+                    <div class="res-sub2">
+                        <div class="res-sub2-text">
+                            <p>Publication Date</p>
+                            <h3>September 2023</h3>
+                        </div>
+                        <div class="res-sub2-text">
+                            <p>Category</p>
+                            <h3>Space Exploration</h3>
+                        </div>
+                        <div class="res-sub2-text">
+                            <p>Author</p>
+                            <h3>FutureTech Space Division</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="topic">
+            <div class="topics-sub">
+                <img src="images/futuretech trends.svg" alt="">
+                <h4>FutureTech Trends 2024</h4>
+                <p>An ebook that predicts upcoming technology trends for the next year, including AI developments</p>
+                <div class="res-button">
+                    <button>View Details</button>
+                    <button>Download PDF Now</button>
+                </div>
+            </div>
+            <div class="topics-sub">
+                <img src="images/space-exploration.svg" alt="">
+                <h4>Space Exploration Ebook</h4>
+                <p>An ebook that predicts upcoming technology trends for the next year, including AI developments</p>
+                <div class="res-button">
+                    <button>View Details</button>
+                    <button>Download PDF Now</button>
+                </div>
+            </div>
+            <div class="topics-sub">
+                <img src="images/quantom-computing.svg" alt="">
+                <h4>Quantom Computing Whitepaper</h4>
+                <p>An in-depth whitepaper exploring the principles, applications.</p>
+                <div class="res-button">
+                    <button>View Details</button>
+                    <button>Download PDF Now</button>
+                </div>
+            </div>
+        </div>
+        <section class="sixth">
+            <div class="sixth-top">
+                <img src="images/logo2.svg" alt="">
+                <div class="sixth-text">
+                    <p>Learn, Connect, and Innovate</p>
+                    <h5>Be Part of The Future Tech Revolution</h5>
+                    <p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect
+                        with fellow tech enthusiasts, and drive innovation in the industry. Join a dynamic community of
+                        forward-thinkers.</p>
+                </div>
+            </div>
+            <div class="sixth-bottom">
+                <div class="sixth-div">
+                    <div class="sixth-sub-div">
+                        <p>Resource Access</p>
+                        <img src="images/black-go-icon.svg" alt="">
+                    </div>
+                    <p>Visitors can access a wide range of resources, including ebooks, whitepapers, reports.</p>
+                </div>
+                <div class="sixth-div">
+                    <div class="sixth-sub-div">
+                        <p>Community Forum</p>
+                        <img src="images/black-go-icon.svg" alt="">
+                    </div>
+                    <p>Join our active community forum to discuss industry trends, share insights, and collaborate with
+                        peers.</p>
+                </div>
+                <div class="sixth-div">
+                    <div class="sixth-sub-div">
+                        <p>Tech Events</p>
+                        <img src="images/black-go-icon.svg" alt="">
+                    </div>
+                    <p>Stay updated on upcoming tech events, webinars, and conferences to enhance your knowledge.</p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="foot">
+                <a href="index.html">
+                    <h4>Home</h4>
+                </a>
+                <p>Features</p>
+                <p>Blogs</p>
+                <p>Resouces <span>New</span></p>
+                <p>Tesrimonials</p>
+                <p>Contact Us</p>
+                <p>Newsletter</p>
+            </div>
+            <div class="foot">
+                <a href="news.html">
+                    <h4>News</h4>
+                </a>
+                <p>Trending Stories</p>
+                <p>Featured Videos</p>
+                <p>Technology</p>
+                <p>Health</p>
+                <p>Politics</p>
+                <p>Environment</p>
+            </div>
+            <div class="foot">
+                <a href="blog.html">
+                    <h4>Blogs</h4>
+                </a>
+                <p>Quantum Computing</p>
+                <p>AI Ethics</p>
+                <p>Space Exploration</p>
+                <p>Biotechnology</p>
+                <p>Renewable Energy</p>
+                <p>Biohacking</p>
+            </div>
+            <div class="foot">
+                <a href="podcast.html">
+                    <h4>Podcasts</h4>
+                </a>
+                <p>AI Revolution</p>
+                <p>AI Revolution <span>New</span></p>
+                <p>TechTalk AI</p>
+                <p>AI Conversations</p>
+            </div>
+            <div class="foot">
+                <a href="resources.html">
+                    <h4>Resources</h4>
+                </a>
+                <div class="wrap">
+                    <button>Whitepapers <img src="images/go-icon.svg" alt=""></button>
+                    <button>Ebooks <img src="images/go-icon.svg" alt=""></button>
+                    <button>Reports <img src="images/go-icon.svg" alt=""></button>
+                    <button>Research Papers <img src="images/go-icon.svg" alt=""></button>
+                </div>
+            </div>
+        </footer>
+        <div class="copyright">
+
+            <div class="terms">
+                <p>Terms & Conditions</p>
+                <p>Privacy Policy</p>
+            </div>
+            <div class="socials">
+                <img src="images/twitter (1).svg" alt="">
+                <img src="images/figma.svg" alt="">
+                <img src="images/linkedin.svg" alt="">
+            </div>
+            <p>&copy; 2024 FutureTech. All rights reserved.</p>
+
+        </div>
+        <p class="me">Coded by: Dml_codes</p>
+    </div>
+
+
 </body>
 
 </html>
