--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,222 @@
                     <button>Contact Us</button></a>
             </div>
         </header>
+        <section class="con-top">
+            <div class="con-top-sub">
+                <h3>General Inquiries</h3>
+                <div class="con-button">
+                    <button>contact@ai-podcasts.com <img src="images/go-icon.svg" alt=""></button>
+                    <button>+1(234) 456-7890 <img src="images/go-icon.svg" alt=""></button>
+                </div>
+            </div>
+            <div class="con-top-sub">
+                <h3>Technical Support</h3>
+                <div class="con-button">
+                    <button>contact@ai-podcasts.com <img src="images/go-icon.svg" alt=""></button>
+                    <button>+1(234) 456-7890 <img src="images/go-icon.svg" alt=""></button>
+                </div>
+            </div>
+            <div class="con-top-sub">
+                <h3>Our Office</h3>
+                <div class="con-button">
+                    <p>Address: 123 AI Tech Avenue, Techville, 54321</p>
+                    <button>Get Directions<img src="images/go-icon.svg" alt=""></button>
+                </div>
+            </div>
+            <div class="con-top-sub">
+                <h3>Connect with us</h3>
+                <div class="con-socials">
+                    <img src="images/twitter (1).svg" alt="">
+                    <img src="images/figma.svg" alt="">
+                    <img src="images/linkedin.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <div class="con-bottom">
+            <div class="con-left">
+                <img src="images/touch.svg" alt="">
+                <h2>Get in Touch with AI Podcasts</h2>
+            </div>
+            <div class="con-right">
+                <div class="form-group">
+                    <div class="form-input">
+                        <h3>First Name</h3>
+                        <p>Enter First Name</p>
+                    </div>
+                    <div class="form-input">
+                        <h3>Last Name</h3>
+                        <p>Enter Last Name</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-input">
+                        <h3>Email</h3>
+                        <p>Enter your Email</p>
+                    </div>
+                    <div class="form-input">
+                        <h3>Phone Number</h3>
+                        <p>Enter Phone Number</p>
+                    </div>
+                </div>
 
+                <div class="con-message">
+                    <h3>Message</h3>
+                    <p>Enter your Message</p>
+                </div>
+                <div class="con-term">
+                    <div class="form-term">
+                        <input type="checkbox" id="terms">
+                        <label for="terms">
+                            <h3>I agree with Terms of Use and Privacy Policy</h3>
+                        </label>
+                    </div>
+                    <button>Send</button>
+                </div>
+            </div>
+        </div>
+        <div class="con-bottom">
+            <div class="con-left">
+                <img src="images/asked.svg" alt="">
+                <h2>Asked Question</h2>
+                <p>If the question is not available on our FAQ section, Feel free to contact us personally, we will
+                    resolve your respective doubts. </p>
+                <button>Ask Question <img src="images/go-icon.svg" alt=""></button>
+            </div>
+            <div class="con-right">
+                <div class="con-ai">
+                    <div class="what">
+                        <h3>What is AI?</h3>
+                        <h3>-</h3>
+                    </div>
+                    <p>AI stands for Artificial Intelligence, which refers to the simulation of human intelligence in
+                        machines. It enables them to perform tasks like problem-solving, learning, and decision-making.
+                    </p>
+                </div>
+                <div class="con-sub">
+                    <h3>How can i listen to your podcasts?</h3>
+                    <img src="images/plus.svg" alt="">
+                </div>
+                <div class="con-sub">
+                    <h3>Are your podcasts free to listen to?</h3>
+                    <img src="images/plus.svg" alt="">
+                </div>
+                <div class="con-sub">
+                    <h3>Can i download episodes to listen offline?</h3>
+                    <img src="images/plus.svg" alt="">
+                </div>
+                <div class="con-sub">
+                    <h3>How often do you release new episodes?</h3>
+                    <img src="images/plus.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <section class="sixth">
+            <div class="sixth-top">
+                <img src="images/logo2.svg" alt="">
+                <div class="sixth-text">
+                    <p>Learn, Connect, and Innovate</p>
+                    <h5>Be Part of The Future Tech Revolution</h5>
+                    <p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect
+                        with fellow tech enthusiasts, and drive innovation in the industry. Join a dynamic community of
+                        forward-thinkers.</p>
+                </div>
+            </div>
+            <div class="sixth-bottom">
+                <div class="sixth-div">
+                    <div class="sixth-sub-div">
+                        <p>Resource Access</p>
+                        <img src="images/black-go-icon.svg" alt="">
+                    </div>
+                    <p>Visitors can access a wide range of resources, including ebooks, whitepapers, reports.</p>
+                </div>
+                <div class="sixth-div">
+                    <div class="sixth-sub-div">
+                        <p>Community Forum</p>
+                        <img src="images/black-go-icon.svg" alt="">
+                    </div>
+                    <p>Join our active community forum to discuss industry trends, share insights, and collaborate with
+                        peers.</p>
+                </div>
+                <div class="sixth-div">
+                    <div class="sixth-sub-div">
+                        <p>Tech Events</p>
+                        <img src="images/black-go-icon.svg" alt="">
+                    </div>
+                    <p>Stay updated on upcoming tech events, webinars, and conferences to enhance your knowledge.</p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="foot">
+                <a href="index.html">
+                    <h4>Home</h4>
+                </a>
+                <p>Features</p>
+                <p>Blogs</p>
+                <p>Resouces <span>New</span></p>
+                <p>Tesrimonials</p>
+                <p>Contact Us</p>
+                <p>Newsletter</p>
+            </div>
+            <div class="foot">
+                <a href="news.html">
+                    <h4>News</h4>
+                </a>
+                <p>Trending Stories</p>
+                <p>Featured Videos</p>
+                <p>Technology</p>
+                <p>Health</p>
+                <p>Politics</p>
+                <p>Environment</p>
+            </div>
+            <div class="foot">
+                <a href="blog.html">
+                    <h4>Blogs</h4>
+                </a>
+                <p>Quantum Computing</p>
+                <p>AI Ethics</p>
+                <p>Space Exploration</p>
+                <p>Biotechnology</p>
+                <p>Renewable Energy</p>
+                <p>Biohacking</p>
+            </div>
+            <div class="foot">
+                <a href="podcast.html">
+                    <h4>Podcasts</h4>
+                </a>
+                <p>AI Revolution</p>
+                <p>AI Revolution <span>New</span></p>
+                <p>TechTalk AI</p>
+                <p>AI Conversations</p>
+            </div>
+            <div class="foot">
+                <a href="resources.html">
+                    <h4>Resources</h4>
+                </a>
+                <div class="wrap">
+                    <button>Whitepapers <img src="images/go-icon.svg" alt=""></button>
+                    <button>Ebooks <img src="images/go-icon.svg" alt=""></button>
+                    <button>Reports <img src="images/go-icon.svg" alt=""></button>
+                    <button>Research Papers <img src="images/go-icon.svg" alt=""></button>
+                </div>
+            </div>
+        </footer>
+        <div class="copyright">
+
+            <div class="terms">
+                <p>Terms & Conditions</p>
+                <p>Privacy Policy</p>
+            </div>
+            <div class="socials">
+                <img src="images/twitter (1).svg" alt="">
+                <img src="images/figma.svg" alt="">
+                <img src="images/linkedin.svg" alt="">
+            </div>
+            <p>&copy; 2024 FutureTech. All rights reserved.</p>
+
+        </div>
+        <p class="me">Coded by: Dml_codes</p>
+    </div>
 </body>
 
 </html>
