--- a/contact.html
+++ b/contact.html
@@ -75,27 +75,27 @@
                 <div class="form-group">
                     <div class="form-input">
                         <h3>First Name</h3>
-                        <p>Enter First Name</p>
+                        <input type="text" placeholder="Enter First Name">
                     </div>
                     <div class="form-input">
                         <h3>Last Name</h3>
-                        <p>Enter Last Name</p>
+                        <input type="text" placeholder="Enter Last Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="form-input">
                         <h3>Email</h3>
-                        <p>Enter your Email</p>
+                        <input type="text" placeholder="Enter your Email">
                     </div>
                     <div class="form-input">
                         <h3>Phone Number</h3>
-                        <p>Enter Phone Number</p>
+                        <input type="text" placeholder="Enter Phone Number">
                     </div>
                 </div>
 
                 <div class="con-message">
                     <h3>Message</h3>
-                    <p>Enter your Message</p>
+                    <textarea id="message" rows="4" placeholder="Enter your Message"></textarea>
                 </div>
                 <div class="con-term">
                     <div class="form-term">
@@ -104,7 +104,7 @@
                             <h3>I agree with Terms of Use and Privacy Policy</h3>
                         </label>
                     </div>
-                    <button>Send</button>
+                    <a href="contact.html"><button>Send</button></a>
                 </div>
             </div>
         </div>
